--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
   </head>
 
   <body>
+
     <canvas id="game-canvas"></canvas>
+    <script src="vendor/keymaster.js"></script>
     <script src="lib/util.js"></script>
     <script src="lib/movingObject.js"></script>
     <script src="lib/asteroid.js"></script>
     <script src="lib/ship.js"></script>
     <script src="lib/game.js"></script>
     <script src="lib/gameView.js"></script>
+
 
 
     <script>
