--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
   <body>
 
-    <canvas id="game-canvas"></canvas>
     <script src="vendor/keymaster.js"></script>
     <script src="lib/util.js"></script>
     <script src="lib/movingObject.js"></script>
@@ -27,6 +26,10 @@
     <script src="lib/bullet.js"></script>
     <script src="lib/game.js"></script>
     <script src="lib/gameView.js"></script>
+
+    <h1>ASTEROIDS!!!</h1>
+
+    <canvas id="game-canvas"></canvas>
 
 
 
