--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
   <head>
     <title>Asteroids</title>
-
+    <link href='http://fonts.googleapis.com/css?family=Orbitron:900,400' rel='stylesheet' type='text/css'>
+     <link rel=Stylesheet href="stylesheet.css" type="text/css">
     <style>
-      html, body, canvas {
-        /*padding: 0px;
-        margin: 0px;*/
-      }
+
 
       canvas{
         width: 800px;
@@ -26,12 +24,18 @@
     <script src="lib/bullet.js"></script>
     <script src="lib/game.js"></script>
     <script src="lib/gameView.js"></script>
+    <div class="game">
+      <h1>ASTEROIDS!!!</h1>
 
-    <h1>ASTEROIDS!!!</h1>
+      <canvas id="game-canvas"></canvas>
 
-    <canvas id="game-canvas"></canvas>
+      <ul class="instructions">
+        <li>Navigate with :  'w' &#8593;   's' &#8595;   'a' &#8592;   'd' &#8594;</li>
+        <li>Fire with : 'space-bar'</li>
+        <li>Pause game with : 'p'</li>
+      </ul>
 
-
+    </div>
 
     <script>
       var canvas = document.getElementById("game-canvas");
