--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <script src="lib/movingObject.js"></script>
     <script src="lib/asteroid.js"></script>
     <script src="lib/ship.js"></script>
+    <script src="lib/explosion.js"></script>
     <script src="lib/bullet.js"></script>
+
     <script src="lib/game.js"></script>
     <script src="lib/gameView.js"></script>
     <div class="game">
