Bind arrow keys to ship movement

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       <canvas id="game-canvas"></canvas>
 
       <ul class="instructions">
-        <li>Navigate with :  'w' &#8593;   's' &#8595;   'a' &#8592;   'd' &#8594;</li>
+        <li>Navigate with : arrow keys | |
+           'w' &#8593;   's' &#8595;   'a' &#8592;   'd' &#8594;
+
+        </li>
         <li>Fire with : 'space-bar'</li>
         <li>Pause game with : 'p'</li>
       </ul>
